# RustATmega328p

./: Cargo.toml  README.md  avr-atmega328p.json  build.bat
src/: atmega328p.rs  board.rs  conversion.rs  devices.rs  main.rs  run.rs  usart.rs
src/devices/: adc.rs  keyboard_16.rs  lcd_display.rs
variants/: main_libc.rs  main_ruduino_auto_abc.rs  main_ruduino_manual_abc.rs  many_things.rs  start_ruduino_auto_abc.rs
