[package]
name = "simple_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruduino = "0.3"

# Error: failed to unpack package `avr-libc v0.2.2`
# avr-libc = "0.2.2"

# Seems, like it doesn't bring any benefits:
# libc = "0.2"

# About stack unwinding:
# https://doc.rust-lang.org/book/ch09-01-unrecoverable-errors-with-panic.html
