[package]
name = "simple_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ruduino = "0.3"

# Error: failed to unpack package `avr-libc v0.2.2`
# avr-libc = "0.2.2"

# Seems, like it doesn't bring any benefits:
# libc = "0.2"

# About stack unwinding:
# https://doc.rust-lang.org/book/ch09-01-unrecoverable-errors-with-panic.html

# For some reason, _delay_ms() doesn't work:
# the linker says 'unresolved reference'.
avr_delay = "0.3"

# Used by avr_delay to fetch AVR_CPU_FREQUENCY_HZ.
# We'll declare the frequency this way, and fetch it
# the same way then
avr-config = "2.0"

# LCD management
lcd = "0.3"

[profile.release]
lto = true

# We're stripping all the debug info anyways,
# so panic recovery isn't possible anymore
panic = "abort"

# Seems like it optimizes out sequential writes to CLKPR,
# breaking the register configuration procedure
opt-level = "z"
